src/tests/functionality/assignment_5_functions_headers/valid/15_mandatory_function_call_before_definition_with_forward_decl.c
int later(int x);

int main() {
    return later(6);
}

int later(int x) {
    return x + 1;
}
