src/tests/functionality/assignment_5_functions_headers/invalid_semantic/05_mandatory_forward_declaration_return_type_conflict.c
int f(int x);

float f(int x) {
    return 1.0;
}

int main() {
    return 0;
}
